--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<h2>Import Excel ke Database</h2>
-<input type="file" id="excelFile" />
-<button id="uploadBtn">Upload</button>
 <div id="status"></div>
 
 <script>
@@ -18,12 +15,16 @@
     const statusDiv = document.getElementById('status');
     statusDiv.textContent = 'Uploading...';
 
-    const res = await fetch('/api/importExcel', {
-      method: 'POST',
-      body: formData
-    });
+    try {
+      const res = await fetch('/api/importExcel', {
+        method: 'POST',
+        body: formData
+      });
 
-    const result = await res.json();
-    statusDiv.textContent = result.message;
+      const result = await res.json();
+      statusDiv.textContent = result.message;  // ← pesan sukses / error dari server
+    } catch (err) {
+      statusDiv.textContent = 'Error: ' + err.message;
+    }
   });
 </script>
