--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h2>Import Excel ke Database</h2>
+<h2>Import Excel ke Database Penjualan</h2>
 <input type="file" id="excelFile" />
 <button id="uploadBtn">Upload</button>
 <div id="status"></div>
@@ -18,12 +18,25 @@
     const statusDiv = document.getElementById('status');
     statusDiv.textContent = 'Uploading...';
 
-    const res = await fetch('/api/importExcel', {
-      method: 'POST',
-      body: formData
-    });
+    try {
+      const res = await fetch('/api/importExcel', {
+        method: 'POST',
+        body: formData
+      });
 
-    const result = await res.json();
-    statusDiv.textContent = result.message;
+      const result = await res.json();
+
+      let text = result.message;
+      if (result.failedRows && result.failedRows.length > 0) {
+        text += '\nBaris gagal:\n';
+        result.failedRows.forEach(f => {
+          text += `Baris ${f.rowNumber}: ${f.error}\n`;
+        });
+      }
+
+      statusDiv.textContent = text;
+    } catch (err) {
+      statusDiv.textContent = 'Error: ' + err.message;
+    }
   });
 </script>
