Duplicate connection test button and script

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h2>Test Koneksi MySQL</h2>
-<button id="testBtn">Tes Koneksi</button>
+<button id="testBtn">Tes Koneksi 1</button>
 <pre id="status"></pre>
 
 <script>
@@ -18,3 +18,4 @@ document.getElementById('testBtn').addEventListener('click', async () => {
   }
 });
 </script>
+
